# T-Mobile-Tim

./: readme.md
monitoragent/: README.md  pyproject.toml
monitoragent/src/monitoragent/: crew.py  integrated_monitor_crew.py  main.py  monitor_display.py  simple_usage_tracker.py  tim.py
monitoragent/src/monitoragent/config/: agents.yaml  tasks.yaml
pi/: Modelfile  Wake-up-Tim_en_raspberry-pi_v3_0_0.ppn  main.py  voice_assistant.py
pi/templates/: index.html
