[project]
name = "monitoragent"
version = "0.1.0"
description = "monitorAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.203.1,<1.0.0",
    "onnxruntime>=1.16.0,<1.17.0"
]

[project.scripts]
monitoragent = "monitoragent.main:run"
run_crew = "monitoragent.main:run"
train = "monitoragent.main:train"
replay = "monitoragent.main:replay"
test = "monitoragent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
